tests/negative/gold/no_nl_test.gold
tests/negative/no_nl_test.toit:9:3: error: Incomplete expression
  if
  ^
tests/negative/no_nl_test.toit:9:3: error: Missing colon for 'if' condition
  if
  ^
tests/negative/no_nl_test.toit:9:3: note: Missing colon needed near here
  if
  ^~
Compilation failed.
